# Trainable-Fourier-Series

./: .gitignore  README.md  environment.yml  gee_loss.py  main.py  model.py
pyronn/: .gitignore  CHANGELOG.md  Installation_HPC.md  README.md  build.sh  install_pyronn.bat  pyproject.toml  setup.py
pyronn/examples/: FBP.ipynb  example_cone_3d.py  example_fan_2d.py  example_fan_2d_shortscan.py  example_parallel_2d.py  iterative_reconstruction_parallel.ipynb  parallel_2D_example.ipynb
pyronn/pyronn/: __init__.py
pyronn/pyronn/ct_reconstruction/geometry/: geometry.py
pyronn/pyronn/ct_reconstruction/helpers/filters/: filters.py  weights.py
pyronn/pyronn/ct_reconstruction/helpers/phantoms/: primitives_2d.py  primitives_3d.py  shepp_logan.py
pyronn/pyronn/ct_reconstruction/helpers/trajectories/: arbitrary_trajectory.py  circular_trajectory.py
pyronn/pyronn/ct_reconstruction/layers/: __init__.py  backprojection_2d.py  backprojection_3d.py  projection_2d.py  projection_3d.py  reconstruction.py
pyronn/wheel/: pyronn-0.3.1-cp310-cp310-win_amd64.whl  pyronn-0.3.1-cp311-cp311-linux_x86_64.whl  pyronn-0.3.1-cp311-cp311-win_amd64.whl  pyronn-0.3.2-cp311-cp311-linux_x86_64.whl  pyronn-0.3.2-cp312-cuda118-torch2.5.0-win_amd64.whl
